parse/y.output

state 0
	$accept: .start $end 

	'!'  shift 6
	'('  shift 4
	'-'  shift 12
	PARAM  shift 17
	STRPARAM  shift 15
	.  error

	expr  goto 9
	expr1  goto 11
	expr2  goto 14
	expr3  goto 16
	exprstr  goto 10
	exprstr1  goto 13
	res  goto 3
	item  goto 5
	numItem  goto 7
	strItem  goto 8
	boolItem  goto 2
	start  goto 1

state 1
	$accept:  start.$end 

	$end  accept
	.  error


state 2
	start:  boolItem.    (1)
	boolItem:  boolItem.AND boolItem 
	boolItem:  boolItem.OR boolItem 
	boolItem:  boolItem.'=' boolItem 

	'='  shift 20
	AND  shift 18
	OR  shift 19
	.  reduce 1 (src line 31)


3: shift/reduce conflict (shift 21(0), red'n 2(0)) on AND
3: shift/reduce conflict (shift 22(0), red'n 2(0)) on OR
state 3
	boolItem:  res.    (2)
	res:  res.AND res 
	res:  res.OR res 

	AND  shift 21
	OR  shift 22
	.  reduce 2 (src line 36)


state 4
	boolItem:  '('.boolItem ')' 
	boolItem:  '('.item ')' 
	res:  '('.res ')' 
	exprstr:  '('.exprstr ')' 
	numItem:  '('.item ')' 
	expr3:  '('.expr ')' 

	'!'  shift 6
	'('  shift 4
	'-'  shift 12
	PARAM  shift 17
	STRPARAM  shift 15
	.  error

	expr  goto 27
	expr1  goto 11
	expr2  goto 14
	expr3  goto 16
	exprstr  goto 26
	exprstr1  goto 13
	res  goto 25
	item  goto 24
	numItem  goto 7
	strItem  goto 8
	boolItem  goto 23

5: shift/reduce conflict (shift 28(0), red'n 10(0)) on '='
5: shift/reduce conflict (shift 30(0), red'n 10(0)) on AND
5: shift/reduce conflict (shift 31(0), red'n 10(0)) on OR
state 5
	boolItem:  item.'=' item 
	boolItem:  item.NOT item 
	res:  item.    (10)
	res:  item.AND item 
	res:  item.OR item 

	'='  shift 28
	NOT  shift 29
	AND  shift 30
	OR  shift 31
	.  reduce 10 (src line 69)


state 6
	res:  '!'.item 

	'('  shift 33
	'-'  shift 12
	PARAM  shift 17
	STRPARAM  shift 15
	.  error

	expr  goto 9
	expr1  goto 11
	expr2  goto 14
	expr3  goto 16
	exprstr  goto 10
	exprstr1  goto 13
	item  goto 32
	numItem  goto 7
	strItem  goto 8

state 7
	item:  numItem.    (17)

	.  reduce 17 (src line 98)


state 8
	item:  strItem.    (18)

	.  reduce 18 (src line 103)


state 9
	numItem:  expr.'>' expr 
	numItem:  expr.'<' expr 
	numItem:  expr.NOT expr 
	numItem:  expr.'=' expr 
	numItem:  expr.GE expr 
	numItem:  expr.LE expr 

	'>'  shift 34
	'<'  shift 35
	'='  shift 37
	NOT  shift 36
	GE  shift 38
	LE  shift 39
	.  error


state 10
	strItem:  exprstr.'=' exprstr 
	strItem:  exprstr.NOT exprstr 
	strItem:  exprstr.IN '(' exprstr ')' 

	'='  shift 40
	NOT  shift 41
	IN  shift 42
	.  error


state 11
	expr:  expr1.    (33)
	expr1:  expr1.'+' expr2 
	expr1:  expr1.'-' expr2 

	'+'  shift 43
	'-'  shift 44
	.  reduce 33 (src line 190)


state 12
	expr:  '-'.expr 

	'('  shift 46
	'-'  shift 12
	PARAM  shift 17
	.  error

	expr  goto 45
	expr1  goto 11
	expr2  goto 14
	expr3  goto 16

state 13
	exprstr:  exprstr1.    (22)
	exprstr:  exprstr1.'+' exprstr1 

	'+'  shift 47
	.  reduce 22 (src line 124)


state 14
	expr1:  expr2.    (35)
	expr2:  expr2.'*' expr3 
	expr2:  expr2.'/' expr3 

	'*'  shift 48
	'/'  shift 49
	.  reduce 35 (src line 196)


state 15
	exprstr1:  STRPARAM.    (25)

	.  reduce 25 (src line 137)


state 16
	expr2:  expr3.    (38)

	.  reduce 38 (src line 206)


state 17
	expr3:  PARAM.    (41)

	.  reduce 41 (src line 217)


state 18
	boolItem:  boolItem AND.boolItem 

	'!'  shift 6
	'('  shift 4
	'-'  shift 12
	PARAM  shift 17
	STRPARAM  shift 15
	.  error

	expr  goto 9
	expr1  goto 11
	expr2  goto 14
	expr3  goto 16
	exprstr  goto 10
	exprstr1  goto 13
	res  goto 3
	item  goto 5
	numItem  goto 7
	strItem  goto 8
	boolItem  goto 50

state 19
	boolItem:  boolItem OR.boolItem 

	'!'  shift 6
	'('  shift 4
	'-'  shift 12
	PARAM  shift 17
	STRPARAM  shift 15
	.  error

	expr  goto 9
	expr1  goto 11
	expr2  goto 14
	expr3  goto 16
	exprstr  goto 10
	exprstr1  goto 13
	res  goto 3
	item  goto 5
	numItem  goto 7
	strItem  goto 8
	boolItem  goto 51

state 20
	boolItem:  boolItem '='.boolItem 

	'!'  shift 6
	'('  shift 4
	'-'  shift 12
	PARAM  shift 17
	STRPARAM  shift 15
	.  error

	expr  goto 9
	expr1  goto 11
	expr2  goto 14
	expr3  goto 16
	exprstr  goto 10
	exprstr1  goto 13
	res  goto 3
	item  goto 5
	numItem  goto 7
	strItem  goto 8
	boolItem  goto 52

state 21
	res:  res AND.res 

	'!'  shift 6
	'('  shift 55
	'-'  shift 12
	PARAM  shift 17
	STRPARAM  shift 15
	.  error

	expr  goto 9
	expr1  goto 11
	expr2  goto 14
	expr3  goto 16
	exprstr  goto 10
	exprstr1  goto 13
	res  goto 53
	item  goto 54
	numItem  goto 7
	strItem  goto 8

state 22
	res:  res OR.res 

	'!'  shift 6
	'('  shift 55
	'-'  shift 12
	PARAM  shift 17
	STRPARAM  shift 15
	.  error

	expr  goto 9
	expr1  goto 11
	expr2  goto 14
	expr3  goto 16
	exprstr  goto 10
	exprstr1  goto 13
	res  goto 56
	item  goto 54
	numItem  goto 7
	strItem  goto 8

state 23
	boolItem:  boolItem.AND boolItem 
	boolItem:  boolItem.OR boolItem 
	boolItem:  boolItem.'=' boolItem 
	boolItem:  '(' boolItem.')' 

	'='  shift 20
	')'  shift 57
	AND  shift 18
	OR  shift 19
	.  error


24: shift/reduce conflict (shift 28(0), red'n 10(0)) on '='
24: shift/reduce conflict (shift 58(0), red'n 10(0)) on ')'
24: shift/reduce conflict (shift 30(0), red'n 10(0)) on AND
24: shift/reduce conflict (shift 31(0), red'n 10(0)) on OR
state 24
	boolItem:  item.'=' item 
	boolItem:  item.NOT item 
	boolItem:  '(' item.')' 
	res:  item.    (10)
	res:  item.AND item 
	res:  item.OR item 
	numItem:  '(' item.')' 

	'='  shift 28
	')'  shift 58
	NOT  shift 29
	AND  shift 30
	OR  shift 31
	.  error


25: shift/reduce conflict (shift 59(0), red'n 2(0)) on ')'
25: shift/reduce conflict (shift 21(0), red'n 2(0)) on AND
25: shift/reduce conflict (shift 22(0), red'n 2(0)) on OR
state 25
	boolItem:  res.    (2)
	res:  res.AND res 
	res:  res.OR res 
	res:  '(' res.')' 

	')'  shift 59
	AND  shift 21
	OR  shift 22
	.  reduce 2 (src line 36)


state 26
	strItem:  exprstr.'=' exprstr 
	strItem:  exprstr.NOT exprstr 
	strItem:  exprstr.IN '(' exprstr ')' 
	exprstr:  '(' exprstr.')' 

	'='  shift 40
	')'  shift 60
	NOT  shift 41
	IN  shift 42
	.  error


state 27
	numItem:  expr.'>' expr 
	numItem:  expr.'<' expr 
	numItem:  expr.NOT expr 
	numItem:  expr.'=' expr 
	numItem:  expr.GE expr 
	numItem:  expr.LE expr 
	expr3:  '(' expr.')' 

	'>'  shift 34
	'<'  shift 35
	'='  shift 37
	')'  shift 61
	NOT  shift 36
	GE  shift 38
	LE  shift 39
	.  error


state 28
	boolItem:  item '='.item 

	'('  shift 33
	'-'  shift 12
	PARAM  shift 17
	STRPARAM  shift 15
	.  error

	expr  goto 9
	expr1  goto 11
	expr2  goto 14
	expr3  goto 16
	exprstr  goto 10
	exprstr1  goto 13
	item  goto 62
	numItem  goto 7
	strItem  goto 8

state 29
	boolItem:  item NOT.item 

	'('  shift 33
	'-'  shift 12
	PARAM  shift 17
	STRPARAM  shift 15
	.  error

	expr  goto 9
	expr1  goto 11
	expr2  goto 14
	expr3  goto 16
	exprstr  goto 10
	exprstr1  goto 13
	item  goto 63
	numItem  goto 7
	strItem  goto 8

state 30
	res:  item AND.item 

	'('  shift 33
	'-'  shift 12
	PARAM  shift 17
	STRPARAM  shift 15
	.  error

	expr  goto 9
	expr1  goto 11
	expr2  goto 14
	expr3  goto 16
	exprstr  goto 10
	exprstr1  goto 13
	item  goto 64
	numItem  goto 7
	strItem  goto 8

state 31
	res:  item OR.item 

	'('  shift 33
	'-'  shift 12
	PARAM  shift 17
	STRPARAM  shift 15
	.  error

	expr  goto 9
	expr1  goto 11
	expr2  goto 14
	expr3  goto 16
	exprstr  goto 10
	exprstr1  goto 13
	item  goto 65
	numItem  goto 7
	strItem  goto 8

state 32
	res:  '!' item.    (11)

	.  reduce 11 (src line 74)


state 33
	exprstr:  '('.exprstr ')' 
	numItem:  '('.item ')' 
	expr3:  '('.expr ')' 

	'('  shift 33
	'-'  shift 12
	PARAM  shift 17
	STRPARAM  shift 15
	.  error

	expr  goto 27
	expr1  goto 11
	expr2  goto 14
	expr3  goto 16
	exprstr  goto 26
	exprstr1  goto 13
	item  goto 66
	numItem  goto 7
	strItem  goto 8

state 34
	numItem:  expr '>'.expr 

	'('  shift 46
	'-'  shift 12
	PARAM  shift 17
	.  error

	expr  goto 67
	expr1  goto 11
	expr2  goto 14
	expr3  goto 16

state 35
	numItem:  expr '<'.expr 

	'('  shift 46
	'-'  shift 12
	PARAM  shift 17
	.  error

	expr  goto 68
	expr1  goto 11
	expr2  goto 14
	expr3  goto 16

state 36
	numItem:  expr NOT.expr 

	'('  shift 46
	'-'  shift 12
	PARAM  shift 17
	.  error

	expr  goto 69
	expr1  goto 11
	expr2  goto 14
	expr3  goto 16

state 37
	numItem:  expr '='.expr 

	'('  shift 46
	'-'  shift 12
	PARAM  shift 17
	.  error

	expr  goto 70
	expr1  goto 11
	expr2  goto 14
	expr3  goto 16

state 38
	numItem:  expr GE.expr 

	'('  shift 46
	'-'  shift 12
	PARAM  shift 17
	.  error

	expr  goto 71
	expr1  goto 11
	expr2  goto 14
	expr3  goto 16

state 39
	numItem:  expr LE.expr 

	'('  shift 46
	'-'  shift 12
	PARAM  shift 17
	.  error

	expr  goto 72
	expr1  goto 11
	expr2  goto 14
	expr3  goto 16

state 40
	strItem:  exprstr '='.exprstr 

	'('  shift 74
	STRPARAM  shift 15
	.  error

	exprstr  goto 73
	exprstr1  goto 13

state 41
	strItem:  exprstr NOT.exprstr 

	'('  shift 74
	STRPARAM  shift 15
	.  error

	exprstr  goto 75
	exprstr1  goto 13

state 42
	strItem:  exprstr IN.'(' exprstr ')' 

	'('  shift 76
	.  error


state 43
	expr1:  expr1 '+'.expr2 

	'('  shift 46
	PARAM  shift 17
	.  error

	expr2  goto 77
	expr3  goto 16

state 44
	expr1:  expr1 '-'.expr2 

	'('  shift 46
	PARAM  shift 17
	.  error

	expr2  goto 78
	expr3  goto 16

state 45
	expr:  '-' expr.    (34)

	.  reduce 34 (src line 192)


state 46
	expr3:  '('.expr ')' 

	'('  shift 46
	'-'  shift 12
	PARAM  shift 17
	.  error

	expr  goto 79
	expr1  goto 11
	expr2  goto 14
	expr3  goto 16

state 47
	exprstr:  exprstr1 '+'.exprstr1 

	STRPARAM  shift 15
	.  error

	exprstr1  goto 80

state 48
	expr2:  expr2 '*'.expr3 

	'('  shift 46
	PARAM  shift 17
	.  error

	expr3  goto 81

state 49
	expr2:  expr2 '/'.expr3 

	'('  shift 46
	PARAM  shift 17
	.  error

	expr3  goto 82

50: shift/reduce conflict (shift 20(0), red'n 3(0)) on '='
50: shift/reduce conflict (shift 18(0), red'n 3(0)) on AND
50: shift/reduce conflict (shift 19(0), red'n 3(0)) on OR
state 50
	boolItem:  boolItem.AND boolItem 
	boolItem:  boolItem AND boolItem.    (3)
	boolItem:  boolItem.OR boolItem 
	boolItem:  boolItem.'=' boolItem 

	'='  shift 20
	AND  shift 18
	OR  shift 19
	.  reduce 3 (src line 41)


51: shift/reduce conflict (shift 20(0), red'n 4(0)) on '='
51: shift/reduce conflict (shift 18(0), red'n 4(0)) on AND
51: shift/reduce conflict (shift 19(0), red'n 4(0)) on OR
state 51
	boolItem:  boolItem.AND boolItem 
	boolItem:  boolItem.OR boolItem 
	boolItem:  boolItem OR boolItem.    (4)
	boolItem:  boolItem.'=' boolItem 

	'='  shift 20
	AND  shift 18
	OR  shift 19
	.  reduce 4 (src line 45)


52: shift/reduce conflict (shift 20(0), red'n 5(0)) on '='
52: shift/reduce conflict (shift 18(0), red'n 5(0)) on AND
52: shift/reduce conflict (shift 19(0), red'n 5(0)) on OR
state 52
	boolItem:  boolItem.AND boolItem 
	boolItem:  boolItem.OR boolItem 
	boolItem:  boolItem.'=' boolItem 
	boolItem:  boolItem '=' boolItem.    (5)

	'='  shift 20
	AND  shift 18
	OR  shift 19
	.  reduce 5 (src line 49)


53: shift/reduce conflict (shift 21(0), red'n 14(0)) on AND
53: shift/reduce conflict (shift 22(0), red'n 14(0)) on OR
state 53
	res:  res.AND res 
	res:  res AND res.    (14)
	res:  res.OR res 

	AND  shift 21
	OR  shift 22
	.  reduce 14 (src line 86)


54: shift/reduce conflict (shift 30(0), red'n 10(0)) on AND
54: shift/reduce conflict (shift 31(0), red'n 10(0)) on OR
state 54
	res:  item.    (10)
	res:  item.AND item 
	res:  item.OR item 

	AND  shift 30
	OR  shift 31
	.  reduce 10 (src line 69)


state 55
	res:  '('.res ')' 
	exprstr:  '('.exprstr ')' 
	numItem:  '('.item ')' 
	expr3:  '('.expr ')' 

	'!'  shift 6
	'('  shift 55
	'-'  shift 12
	PARAM  shift 17
	STRPARAM  shift 15
	.  error

	expr  goto 27
	expr1  goto 11
	expr2  goto 14
	expr3  goto 16
	exprstr  goto 26
	exprstr1  goto 13
	res  goto 83
	item  goto 84
	numItem  goto 7
	strItem  goto 8

56: shift/reduce conflict (shift 21(0), red'n 15(0)) on AND
56: shift/reduce conflict (shift 22(0), red'n 15(0)) on OR
state 56
	res:  res.AND res 
	res:  res.OR res 
	res:  res OR res.    (15)

	AND  shift 21
	OR  shift 22
	.  reduce 15 (src line 90)


state 57
	boolItem:  '(' boolItem ')'.    (6)

	.  reduce 6 (src line 53)


 58: reduce/reduce conflict  (red'ns 9 and 32) on $end
 58: reduce/reduce conflict  (red'ns 9 and 32) on '='
 58: reduce/reduce conflict  (red'ns 9 and 32) on ')'
 58: reduce/reduce conflict  (red'ns 9 and 32) on AND
 58: reduce/reduce conflict  (red'ns 9 and 32) on OR
state 58
	boolItem:  '(' item ')'.    (9)
	numItem:  '(' item ')'.    (32)

	NOT  reduce 32 (src line 186)
	.  reduce 9 (src line 65)


state 59
	res:  '(' res ')'.    (16)

	.  reduce 16 (src line 94)


state 60
	exprstr:  '(' exprstr ')'.    (24)

	.  reduce 24 (src line 133)


state 61
	expr3:  '(' expr ')'.    (42)

	.  reduce 42 (src line 219)


state 62
	boolItem:  item '=' item.    (7)

	.  reduce 7 (src line 57)


state 63
	boolItem:  item NOT item.    (8)

	.  reduce 8 (src line 61)


state 64
	res:  item AND item.    (12)

	.  reduce 12 (src line 78)


state 65
	res:  item OR item.    (13)

	.  reduce 13 (src line 82)


state 66
	numItem:  '(' item.')' 

	')'  shift 85
	.  error


state 67
	numItem:  expr '>' expr.    (26)

	.  reduce 26 (src line 139)


state 68
	numItem:  expr '<' expr.    (27)

	.  reduce 27 (src line 148)


state 69
	numItem:  expr NOT expr.    (28)

	.  reduce 28 (src line 156)


state 70
	numItem:  expr '=' expr.    (29)

	.  reduce 29 (src line 160)


state 71
	numItem:  expr GE expr.    (30)

	.  reduce 30 (src line 168)


state 72
	numItem:  expr LE expr.    (31)

	.  reduce 31 (src line 177)


state 73
	strItem:  exprstr '=' exprstr.    (19)

	.  reduce 19 (src line 107)


state 74
	exprstr:  '('.exprstr ')' 

	'('  shift 74
	STRPARAM  shift 15
	.  error

	exprstr  goto 86
	exprstr1  goto 13

state 75
	strItem:  exprstr NOT exprstr.    (20)

	.  reduce 20 (src line 112)


state 76
	strItem:  exprstr IN '('.exprstr ')' 

	'('  shift 74
	STRPARAM  shift 15
	.  error

	exprstr  goto 87
	exprstr1  goto 13

state 77
	expr1:  expr1 '+' expr2.    (36)
	expr2:  expr2.'*' expr3 
	expr2:  expr2.'/' expr3 

	'*'  shift 48
	'/'  shift 49
	.  reduce 36 (src line 198)


state 78
	expr1:  expr1 '-' expr2.    (37)
	expr2:  expr2.'*' expr3 
	expr2:  expr2.'/' expr3 

	'*'  shift 48
	'/'  shift 49
	.  reduce 37 (src line 202)


state 79
	expr3:  '(' expr.')' 

	')'  shift 61
	.  error


state 80
	exprstr:  exprstr1 '+' exprstr1.    (23)

	.  reduce 23 (src line 129)


state 81
	expr2:  expr2 '*' expr3.    (39)

	.  reduce 39 (src line 208)


state 82
	expr2:  expr2 '/' expr3.    (40)

	.  reduce 40 (src line 212)


state 83
	res:  res.AND res 
	res:  res.OR res 
	res:  '(' res.')' 

	')'  shift 59
	AND  shift 21
	OR  shift 22
	.  error


84: shift/reduce conflict (shift 85(0), red'n 10(0)) on ')'
84: shift/reduce conflict (shift 30(0), red'n 10(0)) on AND
84: shift/reduce conflict (shift 31(0), red'n 10(0)) on OR
state 84
	res:  item.    (10)
	res:  item.AND item 
	res:  item.OR item 
	numItem:  '(' item.')' 

	')'  shift 85
	AND  shift 30
	OR  shift 31
	.  error


state 85
	numItem:  '(' item ')'.    (32)

	.  reduce 32 (src line 186)


state 86
	exprstr:  '(' exprstr.')' 

	')'  shift 60
	.  error


state 87
	strItem:  exprstr IN '(' exprstr.')' 

	')'  shift 88
	.  error


state 88
	strItem:  exprstr IN '(' exprstr ')'.    (21)

	.  reduce 21 (src line 116)


21 terminals, 13 nonterminals
43 grammar rules, 89/16000 states
30 shift/reduce, 5 reduce/reduce conflicts reported
62 working sets used
memory: parser 189/240000
46 extra closures
181 shift entries, 2 exceptions
53 goto entries
134 entries saved by goto default
Optimizer space used: output 137/240000
137 table entries, 6 zero
maximum spread: 21, maximum offset: 76
